fixed z index of banner to be displayed behind dropdown navigation menu

--- a/src/components/common/InfoBar/InfoBar.module.css
+++ b/src/components/common/InfoBar/InfoBar.module.css
@@ -6,7 +6,7 @@
     top: 64px;
   }
   padding: 12px 0;
-  z-index: var(--info-z-index, 99);
+  z-index: 40;
 
   .msg {
     display: flex;
